2007-09-10   Lucas Rocha <lucasr@gnome.org>

	* docbook/C/rninstallation.xml, docbook/C/rndevelopers.xml: fixed two
	typos. Patch from Milo Casagrande <milo_casagrande@yahoo.it>.

2007-09-08   Clytie Siddall <clytie@riverland.net.au>

	* docbook/vi/vi.po: Updated Vietnamese translation.

2007-09-06  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/figures/*png: Added/updated screenshots.

2007-09-05  Daniel Nylander <po@danielnylander.se>

	* docbook/sv/sv.po: Updated Swedish translation.
	* docbook/sv/figures/*png: Added screenshots.

2007-09-05  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Use the makefile improvement from 
	Peter Newton in svn revision 4787, to avoid breaking the build 
	with an error when a translator forgets to create a figures 
	directory.

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am: Removed the images/ stuff. There is no such 
	directory.
	* docbook/C/rninstallation.xml: Removed the meta-packages from 
	the list.

2007-09-05  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rnusers.xml: Remove the screenshot TODO improvement 
	text from the gedit section. We obviously will not get around to 
	doing that.
	eog: Mention new changed image collection pane buttons.
	* docbook/C/figures: Updated the eog screenshot, for the changed UI.
	Added an epiphany screenshot from Reinout, and used it in the 
	markup.

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rni18n.xml: Updated with the list from 2.16, which 
	is more likely to contain more useful text. Danilo will update 
	this soon for 2.20. Note that we abandonded the (bikesheddable) 
	numbers of speakers of languages in 2.16. There was no list 
	in the 2.18 notes. 

2007-09-04  Murray Cumming  <murrayc@murrayc.com>

	* docbook/C/rndevelopers.xml: Removed more empty link tags.
	* docbook/C/figures/rnusers-seahorse-encrypt-multiple-files.png: 