@@ -10,25 +10,15 @@
 	
 	<para>
 			The GNOME Project's focus on users and usability continues in GNOME &gnomeversion;
-			with its hundreds of bug fixes and user-requested improvements. But the
+			with its hundreds of bug fixes and user-requested improvements. The
 			sheer number of enhancements make it impossible to list every change and
-			improvement made. But we hope to highlight some of the
+			improvement made but we hope to highlight some of the
 			more exciting user-oriented features in this release of GNOME.
 	</para>
 
   <sect2 id="rnusers-email-and-calendar">
       <title>Email and Calendar</title>
-			<para>GNOME's email and groupware client, Evolution, has received another set of improvements.</para>
-			<para>Evolution now shows an icon in your panel's notification area when you have received a new email. Note that, because this is currently only a plugin which is not yet fully integrated into the main preferences, you need to disable the plugin itself if you would like to disable this feature.</para>
-
-			<figure>
-				<title>Evolution's new notification icon.</title>
-				<mediaobject>
-					<imageobject>
-						<imagedata fileref="figures/rnusers-evolution-notification.png"/>
-					</imageobject>
-				</mediaobject>
-			</figure>
+			<para>GNOME's email and groupware client, Evolution, has several new features.</para>
 
 			<para>The new attachment warning could mean the end of those &quot;Sorry, I forgot to attach the file&quot; emails. If you try to send an email that contains the word &quot;attachment&quot; (or similar words), but don't actually attach a file, you will see a helpful warning.</para>
 
@@ -37,6 +27,17 @@
 				<mediaobject>
 					<imageobject>
 						<imagedata fileref="figures/rnusers-evolution-attachment.png"/>
+					</imageobject>
+				</mediaobject>
+			</figure>
+
+			<para>Evolution now shows an icon in your panel's notification area when you have new email. Note that, because this is currently only a plugin which is not yet fully integrated into the main preferences, you need to disable the plugin itself if you would like to disable this feature.</para>
+
+			<figure>
+				<title>Evolution's new notification icon.</title>
+				<mediaobject>
+					<imageobject>
+						<imagedata fileref="figures/rnusers-evolution-notification.png"/>
 					</imageobject>
 				</mediaobject>
 			</figure>
@@ -53,7 +54,7 @@
 			</figure>
 
 			<para>The new &quot;Magic Space Bar&quot; support is hard to find, but useful - it means you need just one key to read new mails in all your folders. Just press the space bar to scroll the message preview window to the end of the email, then press it  again to view the next unread email in that folder. When you've read all the emails in that folder, press it again to show the first unread email in the next folder.</para>
-			<para>Evolution's calendar feature has also seen some useful improvements. The search interface allows advanced searches such as those already available for email and address book searches, and you can save your searches to run them again later. The Show drop-down now provides quick access to the next 7 day's appointments and to active appointments.</para>
+			<para>Evolution's calendar feature also has some useful improvements. The search interface allows advanced searches such as those already available for email and address book searches, and you can save your searches to run them again later. The Show drop-down now provides quick access to the next 7 day's appointments and to active appointments.</para>
 			
 			<figure>
 				<title>Evolution's 7 day events view.</title>
@@ -68,7 +69,6 @@
 			<itemizedlist>
         <listitem><para>moves threads to the top of the list when a thread has a new Email, when using the threaded view.</para></listitem>
         <listitem><para>uses the standard GTK+ printing system, using the same dialog windows as other applications, while providing more printing options than before.</para></listitem>
-        <listitem><para>uses the standard timezone information, so it doesn't need to ask you where you live, and automatically knows about daylight saving times.</para></listitem>
         <listitem><para>allows you to choose the Spam plugin (SpamAssassin or BogoFilter) via its preferences. And SpamAssassin will now actually learn when you mark emails as Junk or Not Junk.</para></listitem>
 			</itemizedlist>
 
@@ -338,6 +338,13 @@
 					</imageobject>
 				</mediaobject>
 			</figure>
+
+    </sect2>
+
+    <sect2 id="rnusers-accessibility">
+      <title>Accessibility</title>
+			<para>GNOME's accessibility support can be customized to allow people with a range or disabilities to use GNOME. The Orca screen-reader is a key part of this support, using speech synthesis, braille, and magnification to assist people with visual impairments.</para>
+			<para>Orca's major advantage over other screen-readers is its application-specific support. This means that, as well as using the general meta-information available via the ATK tooklkit (and the AT-SPI system), it has additional understanding of the user interfaces of particular applications, and can even understand appliations that don't have full accessibility support. For instance, the latest version adds greatly improved support for OpenOffice, Firefox, Thunderbird, GAIM and Java applications. It also now deals with progress bars, tooltips, and notification messages, and can use custom pronunciations for special words.</para>
 
     </sect2>
 
