@@ -1,3 +1,7 @@
+2007-09-10  Murray Cumming  <murrayc@murrayc.com>
+
+	* docbook/C/rnusers.xml: Added the accessibility section.
+
 2007-09-10   Lucas Rocha <lucasr@gnome.org>
 
 	* docbook/C/rninstallation.xml, docbook/C/rndevelopers.xml: fixed two
